--- a/index.html
+++ b/index.html
@@ -17,7 +17,27 @@
             <button class="botao">Criar um portfolio</button>
             <button class="botao">Atualizar meu currículo</button>
         </div>
+        <div class="abas-textos">
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                <h4 class="aba-conteudo-titulo-segundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+                <h4 class="aba-conteudo-titulo-segundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Criar um portifólio com os 3 melhores projetos </h3>
+                <h4 class="aba-conteudo-titulo-segundario">Tempo para completar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Atualizar da Alura</h3>
+                <h4 class="aba-conteudo-titulo-segundario">Tempo para completar o objetivo</h4>
+            </div>
+        </div>
     </section>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
